Latest version that uses ES7 modules

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script src="test/vendor/mocha.js"></script>
   <script src="test/vendor/chai.js"></script>
   <script src="test/vendor/sinon.js"></script>
-  <script src="cookies.js"></script>
+  <script src="cookies.min.js"></script>
   <script>
     mocha.setup('bdd');
     var base = document.getElementById("base");
